<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/space20"
            android:src="@drawable/ic_back" />

        <RelativeLayout
            android:id="@+id/rl_profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="@dimen/space20"
                android:src="@drawable/ic_user_117__1_"
                app:civ_border_color="@color/textGray"
                app:civ_border_width="4dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="30dp"
                android:layout_toEndOf="@id/profile_image"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/acmeregular"
                    android:lines="1"
                    android:text="Gauraw Kumar"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <com.google.android.material.chip.Chip
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ableextrabold"
                    android:text="5 *"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    app:chipBackgroundColor="@color/purple_200" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_profile_layout"
            android:orientation="horizontal"
            android:weightSum="3">

            <com.skydoves.elasticviews.ElasticCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/purple_200"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_help_85" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/acmeregular"
                        android:padding="5dp"
                        android:text="@string/help"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </com.skydoves.elasticviews.ElasticCardView>

            <com.skydoves.elasticviews.ElasticCardView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/purple_200"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_wallet_57" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/acmeregular"
                        android:padding="5dp"
                        android:text="@string/wallet"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </com.skydoves.elasticviews.ElasticCardView>

            <com.skydoves.elasticviews.ElasticCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/purple_200"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_time_12" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/acmeregular"
                        android:padding="5dp"
                        android:text="@string/trips"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </com.skydoves.elasticviews.ElasticCardView>
        </LinearLayout>

        <com.skydoves.elasticviews.ElasticCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/purple_200"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/acmeregular"
                    android:padding="5dp"
                    android:text="@string/cash"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:fontFamily="@font/acmeregular"
                    android:padding="5dp"
                    android:text="₹ 0.00"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </com.skydoves.elasticviews.ElasticCardView>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/help" />

                    <TextView
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/space20"
                        android:fontFamily="@font/ableextrabold"
                        android:layout_width="match_parent"
                        android:text="@string/message"
                        android:textColor="@color/purple_200"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/gift" />
                    <TextView
                        android:layout_marginLeft="@dimen/space20"
                        android:fontFamily="@font/ableextrabold"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:textColor="@color/purple_200"
                        android:text="@string/send_gift"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/setting" />
                    <TextView
                        android:layout_marginLeft="@dimen/space20"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:textColor="@color/purple_200"
                        android:fontFamily="@font/ableextrabold"
                        android:layout_width="match_parent"
                        android:text="@string/setting"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/drive" />
                    <TextView
                        android:layout_marginLeft="@dimen/space20"
                        android:fontFamily="@font/ableextrabold"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:textColor="@color/purple_200"
                        android:text="@string/drive_or_deliver"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/legal" />
                    <TextView
                        android:layout_marginLeft="@dimen/space20"
                        android:fontFamily="@font/ableextrabold"
                        android:layout_width="match_parent"
                        android:text="@string/legal"
                        android:gravity="center"
                        android:textColor="@color/purple_200"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/appversion" />
                    <TextView
                        android:textColor="@color/purple_200"
                        android:layout_marginLeft="@dimen/space20"
                        android:fontFamily="@font/ableextrabold"
                        android:layout_width="match_parent"
                        android:text="App version 1.0"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</FrameLayout>